# aata

./: Cargo.toml  README.md
client/: README.md  package-lock.json
client/src/: App.tsx  index.css  types.ts  useGameSocket.ts
client/src/components/: CapabilityEditor.tsx  PreviewGrid.tsx  RuleBuilder.tsx  RuleBuilderDemo.tsx  VoteModal.tsx  index.ts
client/src/logic/: rule-validator.ts
client/src/types/: index.ts  rules.ts
client/src/utils/: customIcons.ts  pieceImages.ts
core/: Cargo.toml
core/src/: errors.rs  lib.rs  rules.rs
server/: Cargo.toml
server/src/: game_loop.rs  main.rs
