[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
core = { path = "../core" }
uuid = { version = "1.19.0", features = ["v4"] }
axum = { version = "0.8.7", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3.31"
